# social_systems_delivery

./: .env  .gitignore  Dockerfile  Readme.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_12_04_0749-a2d058826c18_init_restaurant_and_users_models.py
app/: config.py  loggers.py  main.py
app/auth/: auth.py  exceptions.py  repository.py  routers.py  schemas.py  service.py
app/db/: db.py
app/delivery/: exceptions.py  repository.py  routers.py  schemas.py  service.py
app/models/: __init__.py  base.py  delivery.py  user.py
app/utils/: repository.py  unitofwork.py
tests/: test_main.py
